src/index.css
body {
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif; */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  
}

main {
	margin: 0 auto;
	max-width: 90%;
  padding: 50px 30px;
}
:root {
  --primary: #956e93;
  --secondary: #77ba99;
  
  --error: rgb(228, 46, 1);
  --spacing-one: calc(1rem * 0.5);
  --spacing-two: calc(1rem);
  --spacing-five: calc(2.5rem);

}

* {
  box-sizing: border-box;
}

html,
body {
  min-height: 100%;
}

body {
  margin: 0;
  padding: 0;
  font-weight: lighter;
  line-height: 1.5;
  font-size: 18px;
  letter-spacing: .1em;
  background: rgb(255 231 210);
  color: #d33f49;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: lighter;
  margin: 5px 0;
  line-height: 1.25;
}

h1 {
  font-size: 3rem;
  font-weight: lighter;
}

h2 {
  font-size: 2.5rem;
  font-weight: 500;
}

h3 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1rem;
}

p {
  font-size: 1.1rem;
  margin-top: 0;
}

a:hover {
  text-shadow: 2px 2px 5px #a8a8a8;
}

header {
  background: #ff8263;
  padding: 2%;
}

header a {
  color: #8f0000;
}

button:hover {
  opacity: .8;
}

button[disabled] {
  cursor: default;
  opacity: .8;
}

img {
  max-width: 100%;
}

span[role="img"] {
  cursor: default;
}

form {
  width: 40%;
}

input {
  font-size: 1rem;
  padding: 0.25rem;
  border: none;
  outline: none;
  border-radius: 3px;
  transition: box-shadow 0.2s;
  margin-bottom: 5px;
}

input:focus {
  border: 1px solid #ff8263;
  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
}

textarea:focus {
  border: 2px solid #ff8263;
  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
  outline: none;
}

li {
  list-style: none;
}

nav a:hover {
  text-decoration: none;
}

nav  li {
  cursor: pointer;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  color: #f3f3f3;
}

nav li:hover {
  color: #8f0000;
  border-bottom: 1px white solid;
}

.skills li {
  list-style: circle;
}

textarea {
	width: 600px;
	height: 120px;
	border: 3px solid #cccccc;
	padding: 5px;
}

.container {
  width: 85%;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

.flex-row {
  display: flex;
  flex-wrap: wrap;
}

.space-between {
  justify-content: space-between;
}

.space-around {
  justify-content: space-around;
}

.flex-end {
  justify-content: flex-end;
}

.mx-1 {
  margin-right: var(--spacing-one);
  margin-left: var(--spacing-one);
}

.mx-2 {
  margin-right: var(--spacing-two);
  margin-left: var(--spacing-two);
}

.my-1 {
  margin-top: var(--spacing-one);
  margin-bottom: var(--spacing-one);
}

.my-2 {
  margin-top: var(--spacing-two);
  margin-bottom: var(--spacing-two);
}

.my-5 {
  margin-top: var(--spacing-five);
  margin-bottom: var(--spacing-five);
}

.mb-5 {
  margin-bottom: var(--spacing-five);
}

.px-1 {
  padding-right: var(--spacing-one);
  padding-left: var(--spacing-one);
}

.px-2 {
  padding-right: var(--spacing-two);
  padding-left: var(--spacing-two);
}

.py-1 {
  padding-top: var(--spacing-one);
  padding-bottom: var(--spacing-one);
}

.py-2 {
  padding-top: var(--spacing-two);
  padding-bottom: var(--spacing-two);
}

.card {
  max-width: 30%;
  min-width: 275px;
  text-align: center;
  margin: 10px;
  margin-bottom: 3%;
  background-color: #f3f3f3;
  padding-bottom: 5%;
  box-shadow: 0 0 .55rem rgba(0, 0, 0, .5);
}

.img-thumbnail {
  width: auto;
  height: 300px;
  margin-bottom: 50px;
  cursor: pointer;
}

button {
	background: var(--primary);
	border: 0;
	border-radius: 5px;
	color: #fff;
	cursor: pointer;
	font-size: 16px;
	font-weight: 600;
	margin-bottom: 30px;
	padding: 10px 15px;	
}

a {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	border-radius: 5px;
	color: var(--primary);
	font-weight: lighter;
	padding: 2px 4px;
	margin-left: -2px;
	margin-right: -2px;
	text-decoration: none;
}

.navActive {
  color: #8f0000;
}

.headshot {
  width: 35%;
  margin-right: 3%;
  box-shadow: 2px 2px 10px rgb(116 50 50 / 80%);
}

.test-width {
  width: 55%;
}

footer {
  position: absolute;
  bottom: 0;
  text-align: center;
  width: 100%;
  margin-bottom: 10px;
  margin-top: 10px;
}

.relative {
  position: relative;
  min-height: 100vh;
}

@media screen and (max-width: 900px) {
  .headshot {
    width: 90%;
  }
  .test-width {
    width: 90%;
  }
}

